`data_cleanup`: generate files selection with many beams

--- a/notebooks/data_cleanup.ipynb
+++ b/notebooks/data_cleanup.ipynb
@@ -752,6 +752,245 @@
    "source": [
     "df_beams.to_csv(\"data/IFC_2000_300_Columns_Beams.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Здания с большим количеством балок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Filename\n",
+       "12184-P_Luchtwachttoren_Bladel_V2_ifc      25631\n",
+       "Prefab_ifc                                 16692\n",
+       "Uitbreiding_stadion_Heracles-Almelo_ifc    13927\n",
+       "SantoryTest1_ifc                           12482\n",
+       "BIM_model_ifc                              12121\n",
+       "bouwlaag_1_ifc                              8733\n",
+       "kelder_ifc                                  8038\n",
+       "14765_SB_Kerk_GG_Opheusden (1)_ifc          7652\n",
+       "14765_SB_Kerk_GG_Opheusden_ifc              7652\n",
+       "bouwlaag_2_ifc                              6097\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_many_beams = df_beams.dropna(subset=['NetWeight'])\\\n",
+    "    .value_counts('Filename').head(10)\n",
+    "df_many_beams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 344877 entries, 20023 to 1497397\n",
+      "Columns: 218 entries, Filename to NetSurfaceArea\n",
+      "dtypes: float64(82), object(136)\n",
+      "memory usage: 576.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_selection = df_full[df_full['Filename'].isin(df_many_beams.index)].copy()\n",
+    "df_selection.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drop Almost Missing: ['IsExternal' 'PhaseCreated' 'Area' 'Type' 'Category' 'HasAssignments'\n",
+      " 'Level' 'TypeId' 'FamilyAndType' 'Family' 'Mark' 'Offset' 'IsTypedBy'\n",
+      " 'Manufacturer' 'Span' 'Host' 'ConnectedFrom' 'ExtendToStructure' 'Size'\n",
+      " 'Material' 'ConnectedTo' 'FamilyName' 'TypeName' 'ThermalTransmittance'\n",
+      " 'BarLength' 'Slope' 'SystemName' 'CompositionType' 'Roughness' 'HostId'\n",
+      " 'EnableAnalyticalModel' 'Finish' 'SystemType' 'HasPorts' 'BaseOffset'\n",
+      " 'RoomBounding' 'OmniClassTitle' 'OmniClassNumber' 'OverallWidth'\n",
+      " 'OverallHeight' 'StructuralUsage' 'TopOffset' 'FlowDirection'\n",
+      " 'ContainedIn' 'NominalWidth' 'NominalHeight' 'ReferenceLevel'\n",
+      " 'ModelReference' 'Thickness' 'WarrantyStartDate' 'InstallationDate'\n",
+      " 'Angle' 'RelatedToMass' 'Color' 'Workset' 'magiSystemCode'\n",
+      " 'magiSystemName' 'Shape' 'Structural' 'MagiInstallationElevation'\n",
+      " 'MagiInstallationElevationAbs' 'MerkNummer' 'HasOpenings' 'LocationLine'\n",
+      " 'UnconnectedHeight' 'BaseConstraint' 'TopExtensionDistance'\n",
+      " 'BaseExtensionDistance' 'ASSEMBLYPOS' 'TopIsAttached' 'BaseIsAttached'\n",
+      " 'SerialNumber' 'FillsVoids' 'MovesWithNearbyElements' 'TopConstraint'\n",
+      " 'PARTPOS' 'dX2D' 'dY2D' 'magiVoltage' 'magiActivePower' 'magiCosPhi'\n",
+      " 'ProductionYear' 'Features' 'WarrantyDurationParts' 'WarrantyDescription'\n",
+      " 'ExpectedLife' 'WarrantyGuarantorParts' 'WarrantyGuarantorLabor'\n",
+      " 'WarrantyDurationLabor' 'CodePerformance' 'ReplacementCost' 'BarCode'\n",
+      " 'TagNumber' 'AssetIdentifier' 'ElevationToStory' 'StructuralFunction'\n",
+      " 'ElementClassification' 'ID' 'SurfaceArea' 'RenovationStatus'\n",
+      " 'RenovationStatus' 'Layer' 'BuildingMaterial/Composite/Profile/Fill'\n",
+      " 'HomeStory' 'Position' 'ElevationToProjectZero' 'magiPartTypeId'\n",
+      " 'magiNumberOfPoles' 'MagiConnectionElevation'\n",
+      " 'MagiConnectionElevationAbs' 'VersionID' 'W2D' 'L2D' 'magiFamilyGeom'\n",
+      " 'ModelLabel' 'magiProductId' 'MagiDefaultDx2d' 'MagiDefaultDy2d'\n",
+      " 'MagiHeight' 'MagiWidth' 'MagiSymbolid' 'magi2DFilename'\n",
+      " 'MagiEdgeadjustment' 'MagiDefaultsystemcode' 'ElectricalData' 'magiQPD'\n",
+      " 'magiProductCode' 'UserCode' 'Volumen' 'MagiLength']\n"
+     ]
+    }
+   ],
+   "source": [
+    "drop_almost_missing_columns(df_selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drop Constants: ['IFCVersion', 'OwnerHistory', 'Site', 'LoadBearing', 'Location', 'SlottedHoleX']\n"
+     ]
+    }
+   ],
+   "source": [
+    "drop_constant_columns(df_selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 344877 entries, 20023 to 1497397\n",
+      "Data columns (total 82 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   Filename              344877 non-null  object \n",
+      " 1   IfcEntity             344877 non-null  object \n",
+      " 2   UniqueID              344877 non-null  float64\n",
+      " 3   GlobalId              344877 non-null  object \n",
+      " 4   ObjectPlacement       344877 non-null  float64\n",
+      " 5   Representation        344877 non-null  float64\n",
+      " 6   Parent                344877 non-null  object \n",
+      " 7   Name                  344877 non-null  object \n",
+      " 8   BuildingStorey        344877 non-null  object \n",
+      " 9   BoundingBoxMinX       331030 non-null  float64\n",
+      " 10  BoundingBoxMinY       331030 non-null  float64\n",
+      " 11  BoundingBoxMinZ       331030 non-null  float64\n",
+      " 12  BoundingBoxMaxX       331030 non-null  float64\n",
+      " 13  BoundingBoxMaxY       331030 non-null  float64\n",
+      " 14  BoundingBoxMaxZ       331030 non-null  float64\n",
+      " 15  Range1                331030 non-null  float64\n",
+      " 16  Range2                331030 non-null  float64\n",
+      " 17  Range3                331030 non-null  float64\n",
+      " 18  Nodes                 331030 non-null  float64\n",
+      " 19  Triangles             331030 non-null  float64\n",
+      " 20  NodeArea              331030 non-null  float64\n",
+      " 21  PngPath               331030 non-null  object \n",
+      " 22  DaePath               331030 non-null  object \n",
+      " 23  Building              344877 non-null  object \n",
+      " 24  IsDefinedBy           333111 non-null  object \n",
+      " 25  Tag                   332093 non-null  object \n",
+      " 26  NodeVolume            324012 non-null  float64\n",
+      " 27  CentroidX             324012 non-null  float64\n",
+      " 28  CentroidY             324012 non-null  float64\n",
+      " 29  CentroidZ             324012 non-null  float64\n",
+      " 30  HasAssociations       334873 non-null  object \n",
+      " 31  ObjectType            333641 non-null  object \n",
+      " 32  Decomposes            293989 non-null  object \n",
+      " 33  Length                323634 non-null  object \n",
+      " 34  Reference             173932 non-null  object \n",
+      " 35  ContainedInStructure  50888 non-null   object \n",
+      " 36  Description           321933 non-null  object \n",
+      " 37  Width                 321933 non-null  float64\n",
+      " 38  Volume                276908 non-null  object \n",
+      " 39  Height                321933 non-null  float64\n",
+      " 40  Class                 321933 non-null  object \n",
+      " 41  Phase                 321933 non-null  object \n",
+      " 42  Weight                322951 non-null  object \n",
+      " 43  BottomElevation       321927 non-null  object \n",
+      " 44  TopElevation          321927 non-null  object \n",
+      " 45  AreaPerTons           306800 non-null  float64\n",
+      " 46  NetVolume             321933 non-null  float64\n",
+      " 47  Grade                 148001 non-null  object \n",
+      " 48  CrossSectionArea      156863 non-null  object \n",
+      " 49  Profile               148001 non-null  object \n",
+      " 50  GrossWeight           148001 non-null  float64\n",
+      " 51  AssemblyMark          148001 non-null  object \n",
+      " 52  PartMark              148001 non-null  object \n",
+      " 53  GrossVolume           303091 non-null  float64\n",
+      " 54  GrossArea             300263 non-null  float64\n",
+      " 55  NetArea               153446 non-null  float64\n",
+      " 56  AssemblyWeight        101275 non-null  float64\n",
+      " 57  NetWeight             169671 non-null  float64\n",
+      " 58  OuterSurfaceArea      118516 non-null  float64\n",
+      " 59  NominalDiameter       8322 non-null    object \n",
+      " 60  PredefinedType        16978 non-null   object \n",
+      " 61  NominalLength         8459 non-null    object \n",
+      " 62  BoltLength            8245 non-null    float64\n",
+      " 63  WasherDiameter        8245 non-null    float64\n",
+      " 64  SlottedHoleY          8245 non-null    float64\n",
+      " 65  BoltHoleDiameter      8245 non-null    float64\n",
+      " 66  BoltSize              8245 non-null    float64\n",
+      " 67  NutType               8245 non-null    object \n",
+      " 68  WasherType            8245 non-null    object \n",
+      " 69  BoltStandard          8245 non-null    object \n",
+      " 70  WasherName            8245 non-null    object \n",
+      " 71  BoltName              8243 non-null    object \n",
+      " 72  NutName               8245 non-null    object \n",
+      " 73  CenterOfGravityX      46726 non-null   float64\n",
+      " 74  CenterOfGravityY      46726 non-null   float64\n",
+      " 75  CenterOfGravityZ      46726 non-null   float64\n",
+      " 76  WasherCount           8245 non-null    float64\n",
+      " 77  BoltCount             8245 non-null    float64\n",
+      " 78  NutCount              8245 non-null    float64\n",
+      " 79  GrossFootprintArea    321933 non-null  float64\n",
+      " 80  HasCoverings          12152 non-null   float64\n",
+      " 81  NetSurfaceArea        321933 non-null  float64\n",
+      "dtypes: float64(44), object(38)\n",
+      "memory usage: 218.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_selection.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_selection.to_csv(\"data/IFC_2000_300_Columns_Selection.csv\")"
+   ]
   }
  ],
  "metadata": {
