add `IfcDiscreteAccessory` stats

--- a/notebooks/analyze_buildings.ipynb
+++ b/notebooks/analyze_buildings.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,6 +406,95 @@
     "df_full\\\n",
     "    .loc[lambda x: x['IfcEntity'] == 'IfcWall']\\\n",
     "    .groupby('Filename')['NetSurfaceArea'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Мелкие детали `IfcDiscreteAccessory` по зданиям"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Filename                             Name        \n",
+       "Prefab                               BetonSparing      2788\n",
+       "                                     vulpijp           1964\n",
+       "                                     betonsparing       862\n",
+       "                                     Plaat               14\n",
+       "                                     Koker                2\n",
+       "SantoryTest1                         PLATE           108288\n",
+       "                                     JOIST            27148\n",
+       "                                     STIFFENER         4344\n",
+       "                                     COLUMN            3868\n",
+       "                                     TURNBUCKLE        2872\n",
+       "Uitbreiding stadion Heracles-Almelo  GAIN              2879\n",
+       "                                     HALVE_BOL          760\n",
+       "                                     PLAAT              712\n",
+       "                                     BUIS               617\n",
+       "                                     LIGGER             214\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full\\\n",
+    "    .loc[lambda x: x['IfcEntity'] == 'IfcDiscreteAccessory']\\\n",
+    "    .groupby('Filename')\\\n",
+    "    .apply(lambda x: x['Name'].value_counts().head(5), include_groups=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Топ-10 размеров панелей"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Length  Width  ObjectType\n",
+       "107.0   6.0    PL6*27        13632\n",
+       "320.0   9.0    PL9*80         9968\n",
+       "155.0   6.0    PL6*60         7200\n",
+       "               PL6*65         7068\n",
+       "320.0   9.0    PL9*200        5088\n",
+       "               PL9*150        5088\n",
+       "205.9   9.0    PL9*125        4880\n",
+       "155.0   6.0    PL6*80         3776\n",
+       "177.0   6.0    PL6*113        3408\n",
+       "256.0   16.0   PL16*96        3344\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full\\\n",
+    "    .loc[lambda x: x['IfcEntity'] == 'IfcDiscreteAccessory']\\\n",
+    "    .loc[lambda x: x['Name'] == 'PLATE']\\\n",
+    "    .loc[:, ['Length', 'Width', 'ObjectType']]\\\n",
+    "    .value_counts()\\\n",
+    "    .head(10)"
    ]
   }
  ],
